# paper_organizer

./: .gitignore  AGENT_BRIDGE.md  README.md  pyproject.toml
paper_organizer/: cli.py  config.py
paper_organizer/backends/: endnote.py  zotero.py
paper_organizer/llm/: client.py
paper_organizer/pipeline/: acquire.py  contact.py  models.py  resolve.py  synthesize.py
paper_organizer/server/: app.py
paper_organizer/server/templates/: index.html
proxy/: Dockerfile  README.md  app.py  keygen.sh  litellm_config.yaml  railway.toml
